--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.468.0",
     "motion": "^11.14.4",
     "next": "^15.0.1",
+    "next-cloudinary": "^6.16.0",
     "nextjs-toploader": "^3.7.15",
     "qss": "^3.0.0",
     "react": "^19.0.0",
