--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup
-        uses: ./github/workflows/setup
+        uses: ./.github/workflows/setup
 
       - name: Check
         run: pnpm check
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup
-        uses: ./github/workflows/setup
+        uses: ./.github/workflows/setup
 
       - name: Typecheck
         env:
