--- a/package.json
+++ b/package.json
@@ -17,42 +17,44 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-hover-card": "^1.1.3",
+    "@radix-ui/react-hover-card": "^1.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
-    "@t3-oss/env-nextjs": "^0.10.1",
+    "@t3-oss/env-nextjs": "^0.12.0",
     "@vercel/speed-insights": "^1.1.0",
+    "babel-plugin-react-compiler": "19.0.0-beta-27714ef-20250124",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "geist": "^1.3.0",
-    "lucide-react": "^0.468.0",
-    "motion": "^11.14.4",
-    "next": "^15.0.1",
+    "geist": "^1.3.1",
+    "lucide-react": "^0.474.0",
+    "motion": "^12.0.5",
+    "next": "^15.1.6",
     "next-cloudinary": "^6.16.0",
     "nextjs-toploader": "^3.7.15",
     "qss": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
-    "superjson": "^2.2.1",
-    "tailwind-merge": "^2.5.5",
+    "superjson": "^2.2.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.10",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.1",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.16",
-    "typescript": "^5.7.2"
+    "@tailwindcss/postcss": "^4.0.0",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^22.10.10",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
+    "eslint": "^9.19.0",
+    "eslint-config-next": "^15.1.6",
+    "postcss": "^8.5.1",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.7.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
