--- a/package.json
+++ b/package.json
@@ -16,45 +16,45 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-hover-card": "^1.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@t3-oss/env-nextjs": "^0.12.0",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-hover-card": "^1.1.11",
+    "@radix-ui/react-separator": "^1.1.4",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@t3-oss/env-nextjs": "^0.13.0",
     "@vercel/speed-insights": "^1.2.0",
-    "babel-plugin-react-compiler": "19.0.0-beta-30d8a17-20250209",
+    "babel-plugin-react-compiler": "19.1.0-rc.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
-    "lucide-react": "^0.475.0",
-    "motion": "^12.4.2",
-    "next": "^15.1.7",
+    "lucide-react": "^0.503.0",
+    "motion": "^12.9.2",
+    "next": "^15.3.1",
     "next-cloudinary": "^6.16.0",
-    "nextjs-toploader": "^3.7.15",
+    "nextjs-toploader": "^3.8.16",
     "qss": "^3.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.2",
-    "tailwind-merge": "^3.0.1",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.6",
+    "@tailwindcss/postcss": "^4.1.4",
     "@types/eslint": "^9.6.1",
-    "@types/node": "^22.13.1",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.24.0",
-    "@typescript-eslint/parser": "^8.24.0",
-    "eslint": "^9.20.0",
-    "eslint-config-next": "^15.1.7",
-    "postcss": "^8.5.2",
-    "prettier": "^3.5.0",
+    "@types/node": "^22.15.2",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
+    "eslint": "^9.25.1",
+    "eslint-config-next": "^15.3.1",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.6",
-    "typescript": "^5.7.3"
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5.8.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
