--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "motion": "^12.9.2",
     "next": "^15.3.1",
     "next-cloudinary": "^6.16.0",
+    "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
     "qss": "^3.0.0",
     "react": "^19.1.0",
